--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: deps
         run: |
           sudo apt -y update
-          sudo apt install -y gnupg gperf build-essential libxml2-utils xsltproc repo
+          sudo apt install -y linux-modules-extra-$(uname -r) gnupg gperf build-essential libxml2-utils xsltproc repo
           sudo apt clean
       - uses: easimon/maximize-build-space@master
         with:
@@ -31,6 +31,17 @@ jobs:
           remove-codeql: 'true'
           remove-haskell: 'true'
           remove-docker-images: 'true'
+      - name: zram
+        run: |
+          sudo modprobe zram
+          dev=$(sudo zramctl --find --algorithm zstd --size 32G)
+          sudo mkswap "$dev"
+          sudo swapon --priority 100 "$dev"
+      - name: print zram
+        run: |
+          zramctl
+          swapon --show
+          free -h
       - uses: actions/checkout@v4
       - name: build
         run: |
