--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,11 @@ jobs:
           sudo apt clean
       - uses: easimon/maximize-build-space@master
         with:
-          remove-android: 'true'
+          swap-size-mb: 100
           remove-dotnet: 'true'
-          remove-codeql: 'true'
+          remove-android: 'true'
           remove-haskell: 'true'
+          remove-codeql: 'true'
           remove-docker-images: 'true'
       - name: zram
         run: |
